--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  @font-face {
+    font-family: "Cairo";
+    src: url();
+    src: url(/fonts/Cairo.ttf) format("truetype");
+    font-style: normal;
+    font-display: block;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+  background-color: #0D0B21;
+}
+
+*{
+  @apply font-Cairo;
+}
+
+::-webkit-scrollbar {
+  max-width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb{
+  border: 4px solid rgba(0, 0, 0, 0) !important;
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #757575;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #aaaaaa;
 }
