--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,27 +12,36 @@
   }
 }
 
-body{
-  background-color: #0D0B21;
+body {
+  background-color: #0d0b21;
 }
 
-*{
+* {
   @apply font-Cairo;
 }
 
 ::-webkit-scrollbar {
-  max-width: 12px;
+  max-width: 10px;
   height: 12px;
 }
 
-::-webkit-scrollbar-thumb{
-  border: 4px solid rgba(0, 0, 0, 0) !important;
+::-webkit-scrollbar-thumb {
+  border: 3px solid rgba(0, 0, 0, 0) !important;
   background-clip: padding-box;
   border-radius: 9999px;
-  background-color: #757575;
-  border-radius: 6px;
+  background: #757575;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #aaaaaa;
+}
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+
+  ::-webkit-scrollbar-thumb {
+    background: #757575; 
+  }
 }
